--- a/action.yml
+++ b/action.yml
@@ -13,6 +13,10 @@ inputs:
   secrets:
     required: true
     description: "A semicolon-separated list of secrets to retrieve. These will automatically be converted to environmental variable keys. See README for more details"
+  show_secrets:
+    required: true
+    description: "Show secret values instead of hidden ones (***)"
+    default: false
 
 runs:
   using: 'docker'
